--- a/index.html
+++ b/index.html
@@ -14,22 +14,58 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-
+    <!-- section.main-bay -->
     <section class="main-bay">
-        <ul class="manu-bay">
+        <!-- <ul class="manu-bay">
            <li><a href="#">이용정보</a></li>
            <li><a href="#">즐길거리</a></li>
            <li><a href="#">케리비안 베이 더 알아보기</a></li>
-        </ul>
-
+        </ul> -->
+        <!-- 메인 이미지와 안내 텍스트 이미지 -->
         <ul class="main-img-bay">
             <li>
-            <a href="***메인 이미지 넣기***"><img src="" alt=""></a>
-            <div class="date-bay">2023.03.02 ~ 04.21</div>
-            <div class="mainTxt-bay">케리비안 베이 정기휴장</div>
-            <div class="look-bay">자세히 보기</div>
-
+            <a href="#" class="long-img-bay"><img src="./img/caribbean bay main img.jpg" alt="케리비안 베이 이미지"></a>
+            <a href="#" class="text-img-bay"><img src="./img/caribbean bay main img.png" alt="안내문구"></a>
             </li>   
+        </ul>     
+    </section>
+
+    <!-- section.information-bay -->
+    <section class="inf">
+        <h3>Information</h3>
+        <div class="now"> 지금 바로 생생한 현장 소식</div>
+        <!-- first block -->
+        <ul class="news-bay">
+            <h3>NEWS & NOTICE</h3>
+            <li><span>새로운 소식들</span></li>
+            <li><a href="#">케리비안 베이 정기 휴장 안내</a></li>
+            <li><a href="#">23년 시즌 캘린더 안내</a></li>
+            <li><a href="#">위치 기반 서비스 종료 안내</a></li>
+            <li><a href="#">[공지] 방수 마스크 안내</a></li>
+            <li><a href="#">내 카드 제휴/할인 조회 서비스 오픈!</a></li>
+            <li><a href="#"><img src="./img/caribbean bay water check.jpg" alt="수질확인"></a></li>
+        </ul>
+        <!-- sec block -->
+        <ul class="today-bay">
+            <h3>TODAY</h3>
+            <li><span>오늘의 운영시간</span></li>
+            <li>03월 28일(화)</li>
+            <li>오늘의 운휴 안내</li>
+            <li>라꼬스타,폴바셋,하버 마스터
+                하버 스낵</li>
+            <li><a href="#">케리비안 이용방법 A to Z</a></li>
+        </ul>
+        <!-- thi block -->
+        <ul class="smart-bay">
+            <h3>스마트예약</h3>
+            <li><span>방문 전에 미리 준비!</span></li>
+            <li class="char"><img src="./img/everlan char.png" alt="캐릭터"></li>
+            <li><a href="#"> 이용권</a></li>
+            <li><a href="#"> 베이코인</a></li>
+            <li><a href="#">발레파킹</a></li>
+            <li><a href="#"> 빌리지</a></li>
+            <li><a href="#">실내비치체어</a></li>
+            <li><a href="#"></a><span class="home">"우리집에서 에버랜드까지"</span><span>대중교통º자가용</span><span>이용방법</span></li>
         </ul>
 
     </section>
