--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <li><a href="#">케리비안 이용방법 A to Z</a></li>
         </ul>
         <!-- thi block -->
+        <div class="allSmart-bay">
         <ul class="smart-bay">
             <h3>스마트예약</h3>
             <li><span>방문 전에 미리 준비!</span></li>
@@ -70,9 +71,12 @@
             <li><a href="#"> 베이코인</a></li>
             <li><a href="#">발레파킹</a></li>
             <li><a href="#"> 빌리지</a></li>
-            <li><a href="#">실내비치체어</a></li>
-            <div><a href="#"></a><span class="home">"우리집에서 에버랜드까지"</span><span>대중교통º자가용</span><span>이용방법</span></div>
+            <li><a href="#">실내비치체어</a></li>           
         </ul>
+        <div class="bus-bay"><a href="#"></a><span class="home">"우리집에서 에버랜드까지"</span>
+            <span class="tras-bay">대중교통º자가용</span><span>이용방법</span>
+        </div>
+    </div>
 
     </section>
 
