--- a/index.html
+++ b/index.html
@@ -39,44 +39,57 @@
         <h3 class="main-inf-bay">Information</h3>
         <div class="now-bay"> 지금 바로 생생한 현장 소식</div>
         <!-- first block -->
-        <ul class="news-bay">
-            <h3>NEWS & NOTICE</h3> <br>
-            <div>새로운 소식들</div> <br>
-            <div class="fBox-bay">
-                <li><a href="#">케리비안 베이 정기 휴장 안내</a></li>
-                <li><a href="#">23년 시즌 캘린더 안내</a></li>
-                <li><a href="#">위치 기반 서비스 종료 안내</a></li>
-                <li><a href="#">[공지] 방수 마스크 안내</a></li>
-                <li><a href="#">내 카드 제휴/할인 조회 서비스 오픈!</a></li>
+        <div class="inner-bay">
+            <ul class="news-bay">
+                <h3>NEWS & NOTICE</h3> <br>
+                <div>새로운 소식들</div> <br>
+                <div class="fBox-bay">
+                    <li><a href="#">케리비안 베이 정기 휴장 안내</a></li>
+                    <li><a href="#">23년 시즌 캘린더 안내</a></li>
+                    <li><a href="#">위치 기반 서비스 종료 안내</a></li>
+                    <li><a href="#">[공지] 방수 마스크 안내</a></li>
+                    <li><a href="#">내 카드 제휴/할인 조회 서비스 오픈!</a></li>
+                </div>
+                <li><a href="#" class="water-bay"><img src="./img/caribbean bay water check.jpg" alt="수질확인"></a></li>
+            </ul>
+            <!-- sec block -->
+            <ul class="today-bay">
+                <h3>
+                    <strong>TODAY</strong>
+                    <p class="play-bay">오늘의 운영시간</p>
+                </h3>
+                <li class="fir-bay">03월 28일(화)</li>
+                <li class="sec-bay">오늘의 운휴 안내</li>
+                <li class="thi-bay">라꼬스타,폴바셋,하버 마스터 <br>
+                    하버 스낵</li>
+                <li><a href="#" class="use-bay">케리비안 이용방법 A to Z</a></li>
+            </ul>
+            <!-- thi block -->
+            <div class="allSmart-bay">
+                <ul class="smart-bay">
+                    <h3>
+                        <strong>스마트예약</strong>
+                        <p>방문 전에 미리 준비!</p>
+                        <img src="./img/everlan char.png" alt="쟤">
+                    </h3>
+
+                    <!-- <li class="char"><img src="./img/everlan char.png" alt="캐릭터"></li> -->
+                    <li class="one-bay"><a href="#"><img src="./img/t.png" alt=""> 이용권</a></li>
+                    <li class="two-bay"><a href="#"><img src="./img/bayco.png" alt=""> 베이코인</a></li>
+                    <li class="thr-bay"><a href="#"><img src="./img/park.png" alt=""> 발레파킹</a></li>
+                    <li class="fou-bay"><a href="#"><img src="./img/hoem.png" alt=""> 빌리지</a></li>
+                    <li class="fiv-bay"><a href="#"><img src="./img/chairrrr.png" alt=""> 실내비치체어</a></li>
+                </ul>
+                <div class="bus-bay">
+                    <a href="#">
+                        <p class="myHome-bay">"우리집에서 에버랜드까지</p>
+                        <p class="myCar-bay"><span>대중교통•자가용</span> 이용방법</p>
+                        <img src="./img/bbbuss.png" alt="bus">
+                    </a>
+                </div>
+
             </div>
-            <li><a href="#" class="water-bay"><img src="./img/caribbean bay water check.jpg" alt="수질확인"></a></li>
-        </ul>
-        <!-- sec block -->
-        <ul class="today-bay">
-            <h3>TODAY</h3> 
-            <li><span class="playTime-bay">오늘의 운영시간</span></li>
-            <li>03월 28일(화)</li>
-            <li>오늘의 운휴 안내</li>
-            <li>라꼬스타,폴바셋,하버 마스터
-                하버 스낵</li>
-            <li><a href="#">케리비안 이용방법 A to Z</a></li>
-        </ul>
-        <!-- thi block -->
-        <div class="allSmart-bay">
-        <ul class="smart-bay">
-            <h3>스마트예약</h3>
-            <li><span>방문 전에 미리 준비!</span></li>
-            <li class="char"><img src="./img/everlan char.png" alt="캐릭터"></li>
-            <li><a href="#"> 이용권</a></li>
-            <li><a href="#"> 베이코인</a></li>
-            <li><a href="#">발레파킹</a></li>
-            <li><a href="#"> 빌리지</a></li>
-            <li><a href="#">실내비치체어</a></li>           
-        </ul>
-        <div class="bus-bay"><a href="#"></a><span class="home">"우리집에서 에버랜드까지"</span>
-            <span class="tras-bay">대중교통º자가용</span><span>이용방법</span>
         </div>
-    </div>
 
     </section>
 
