--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
            <li><a href="#">케리비안 베이 더 알아보기</a></li>
         </ul> -->
         <!-- 메인 이미지와 안내 텍스트 이미지 -->
+
         <ul class="main-img-bay">
             <li>
-                <a href="#" class="long-img-bay"><img src="./img/caribbean bay main img.jpg" alt="케리비안 베이 이미지"></a>
+                <a href="#" class="long-img-bay"><img src="./img/caribbeanbaymainimg.jpg" alt="케리비안 베이 이미지"></a>
                 <a href="#" class="text-img-bay"><img src="./img/caribbean bay main img.png" alt="안내문구"></a>
-                <a href="#" class="stop-bay">∥</a>
+                <a href="#" class="stop-bay"><img src="./img/btn-bay.png" alt=""></a>
             </li>
         </ul>
     </section>
@@ -74,11 +75,21 @@
                     </h3>
 
                     <!-- <li class="char"><img src="./img/everlan char.png" alt="캐릭터"></li> -->
-                    <li class="one-bay"><a href="#"><img src="./img/t.png" alt=""> 이용권</a></li>
-                    <li class="two-bay"><a href="#"><img src="./img/bayco.png" alt=""> 베이코인</a></li>
-                    <li class="thr-bay"><a href="#"><img src="./img/park.png" alt=""> 발레파킹</a></li>
-                    <li class="fou-bay"><a href="#"><img src="./img/hoem.png" alt=""> 빌리지</a></li>
-                    <li class="fiv-bay"><a href="#"><img src="./img/chairrrr.png" alt=""> 실내비치체어</a></li>
+                    <li class="one-bay"><a href="#"><img src="./img/t.png" alt="">
+                            <div class="text1">이용권</div>
+                        </a></li>
+                    <li class="two-bay"><a href="#"><img src="./img/bayco.png" alt="">
+                            <div class="text1">베이코인</div>
+                        </a></li>
+                    <li class="thr-bay"><a href="#"><img src="./img/park.png" alt="">
+                            <div class="text1">발레파킹</div>
+                        </a></li>
+                    <li class="fou-bay"><a href="#"><img src="./img/hoem.png" alt="">
+                            <div class="text1">빌리지</div>
+                        </a></li>
+                    <li class="fiv-bay"><a href="#"><img src="./img/chairrrr.png" alt="">
+                            <div class="text1">실내비치체어</div>
+                        </a></li>
                 </ul>
                 <div class="bus-bay">
                     <a href="#">
@@ -93,6 +104,96 @@
 
     </section>
 
+
+
+    <!-- footer -->
+    <footer>
+
+        <section class="footer">
+            <div class="footer-top">
+                <dl>
+                    <dt>
+                        <a href="#"><img src="./img/footer_youtube.gif" alt="유투브"></a>
+                    </dt>
+                    <dd>
+                        <a href="#"><img src="./img/footer_instar.gif" alt="인스타"></a>
+                    </dd>
+                    <dd>
+                        <a href="#"><img src="./img/footer_facebook.gif" alt="페이스북"></a>
+                    </dd>
+                    <dd>
+                        <a href="#"><img src="./img/footer_blog.gif" alt="블로그"></a>
+                    </dd>
+                    <dd>
+                        <a href="#"><img src="./img/footer_Tstory.gif" alt="티스토리"></a>
+                    </dd>
+                    <dd>
+                        <a href="#"><img src="./img/footer_twit.gif" alt="트위터"></a>
+                    </dd>
+                </dl>
+
+                <div class="botton">
+                    <a href="#"><img src="./img/footer_botton1.gif" alt="버튼1"></a>
+                    <a href="#"><img src="./img/footer_botton2.gif" alt="버튼2"></a>
+                </div>
+
+                <div class="tempbox resort">
+                    <a href="#"><p>교통박물관</p></a>
+                    <a href="#"><p>호암미술관</p></a>
+                    <a href="#"><p>글렌로스 골프클럽</p></a>
+                </div>
+
+                <div class="tempbox family">
+                    <a href="#"><p>삼성물산 리조트부문</p></a>
+                    <a href="#"><p>골프삼성</p></a>
+                    <a href="#"><p>삼성화재안내견학교</p></a>
+                    <a href="#"><p>서비스아카데미</p></a>
+                </div>
+
+            </div>
+
+            <div class="footer-bottom">
+                <ul class="footer-menu">
+                    <li>
+                        <a href="" class="intro-ft">에버랜드 리조트 소개</a>
+                    </li>
+                    <li>
+                        <a href="">이용약 </a>
+                    </li>
+                    <li>
+                        <a href="">이메일주소 무단수집 거 </a>
+                    </li>
+                    <li>
+                        <a href="" class="cast-ft">CAST 참여</a>
+                    </li>
+                    <li>
+                        <a href="" class="site-ft">사이트맵</a>
+                    </li>
+                </ul>
+                <br>
+                <br>
+                <address>
+                    <p>경기도 용인시 처인구 포곡읍 에버랜드로 199 삼성물산(주)</p>
+                    <p>대표이사 : 정해린 | 사업자등록번호 : 135-85-04288 | 통신판매업 신고번호 : 제2006-용인처인-0216호 | <a href="">사업자정보확인▶</a></p>
+                    <p>
+                        <strong><a href="" class="cen-ft">손님상담센터</a>
+                            : 031-320-5000(유료) |
+                        </strong>
+                        <a href=""><span class="a-ft">개인정보처리방침</span></a> |
+                        <a href=""><span class="b-ft">방침 개정 안내</span></a> |
+                        <a href=""><span class="c-ft">입찰공고</span></a>
+                    </p>
+                    <p>Copyright © Samsung C&T Corporation. All rights reserved. </p>
+                </address>
+                <a href="" class="kgimg"><img src="./img/kg.gif" alt=""></a>
+            </div>
+
+
+        </section>
+
+
+    </footer>
+    <!-- end footer -->
 
 </body>
 
